# brev-rest

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
brev_rest/: __init__.py  app.py  asgi.py  loader.py  logger.py  rest.py  route.py  route_loader.py  router_def.py  setup_def.py  startup.py  types.py  utils.py
tests/: test_brev_rest.py
tests/example_app/: endpoint.py  on_start.py  second_endpoint.py  shared1.py  shared2.py
tests/example_app/subpackage/: sub.py
tests/example_explicit_setup/: __init__.py  endpoint1.py  endpoint2.py
