[tool.poetry]
name = "brev-rest"
version = "0.1.0"
description = ""
authors = ["Alec Fong <alecfong1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^20.8b1", allow-prereleases = true }
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
