[tool.poetry]
name = "brev-rest"
version = "0.1.0"
description = ""
authors = ["Alec Fong <alecfong1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
astpath = {version = "^0.9.0", extras = ["xpath"]}
fastapi = "^0.61.1"
merge-args = "^0.1.4"
uvicorn = "^0.12.2"
requests = "^2.24.0"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^20.8b1", allow-prereleases = true }
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
